--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="content">
     <h1>Don't miss your tickets for the best ever show</h1>
-    <% if @remaining_tickets != 0 %>
-      <span>only <%= pluralize(@remaining_tickets, 'ticket') %> left</span>
+    <% if @event.available_tickets_count > 0 %>
+      <span>only <%= pluralize(@event.available_tickets_count, 'ticket') %> left</span>
     <% else %>
       <span>sold out</span>
     <% end %>
