--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -31,7 +31,7 @@ input[type="text"] {
   width: 280px;
 }
 
-input[type="submit"] {
+@mixin button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -41,4 +41,13 @@ input[type="submit"] {
   font-weight: bold;
   padding: 4px 25px;
   margin-top: 30px;
+  text-decoration: none;
+}
+
+input[type="submit"] {
+  @include button;
+}
+
+.button {
+  @include button;
 }
