fix link bug on success endpoint

--- a/app/views/charge/success.html.erb
+++ b/app/views/charge/success.html.erb
@@ -1,5 +1,5 @@
 <div class="content">
   Congratulations <%= @ticket.name %>!
 
-  You've been added to the <% link_to 'list of guests', guests_path %>
+  You've been added to the <%= link_to 'list of guests', guests_path %>
 </div>
