--- a/app/views/charge/index.html.erb
+++ b/app/views/charge/index.html.erb
@@ -1,16 +1,20 @@
 <% content_for :head do %>
   <script src="https://js.stripe.com/v3/"></script>
 
-  <script type="text/javascript">
-    var stripe = Stripe('pk_test_3rCk8Ewa2UTc79iWJZDCeKmH00plww4RXx');
+  <script type="application/javascript">
+    function setupStripe() {
+      var stripe = Stripe('pk_test_3rCk8Ewa2UTc79iWJZDCeKmH00plww4RXx');
 
-    document
-      .querySelector("#checkout")
-      .addEventListener('click', (event) => {
-        stripe.redirectToCheckout({
-          sessionId: '<%= @stripe_session.id %>'
+      document
+        .getElementById("checkout")
+        .addEventListener('click', (event) => {
+          stripe.redirectToCheckout({
+            sessionId: '<%= @stripe_session.id %>'
+          })
         })
-      })
+    }
+
+    window.onload = setupStripe;
   </script>
 
 <% end %>
