add a /cancel route
This redirects to the root with an alert for the cancellation.

--- a/app/views/landing/index.html.erb
+++ b/app/views/landing/index.html.erb
@@ -1,3 +1,7 @@
+<% if flash[:alert] %>
+  <p class="alert"><%= flash[:alert] %></p>
+<% end %>
+
 <div class="content">
   <h1>Don't miss your tickets for the best ever show</h1>
   <% if @event.available_tickets_count > 0 %>
