--- a/app/views/charge/index.html.erb
+++ b/app/views/charge/index.html.erb
@@ -2,8 +2,9 @@
   <script src="https://js.stripe.com/v3/"></script>
 
   <script type="text/javascript">
-    function setupStripe() {
-      var stripe = Stripe('pk_test_3rCk8Ewa2UTc79iWJZDCeKmH00plww4RXx');
+    const setupStripe = () => {
+      console.log('setupStripe ran')
+      const stripe = Stripe('pk_test_3rCk8Ewa2UTc79iWJZDCeKmH00plww4RXx');
 
       document
         .getElementById("checkout")
