--- a/app/views/charge/index.html.erb
+++ b/app/views/charge/index.html.erb
@@ -1,6 +1,4 @@
 <% content_for :head do %>
-  <script src="https://js.stripe.com/v3/"></script>
-
   <script type="text/javascript">
     const setupStripe = () => {
       console.log('setupStripe ran')
@@ -15,7 +13,9 @@
         })
     }
 
-    window.onload = setupStripe;
+    document.addEventListener("turbolinks:load", () => {
+      setupStripe();
+    })
   </script>
 
 <% end %>
