--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -42,6 +42,9 @@ input[type="text"] {
   padding: 4px 25px;
   margin-top: 30px;
   text-decoration: none;
+  &:disabled {
+    opacity: 0.5;
+  }
 }
 
 input[type="submit"] {
