--- a/app/views/guests/index.html.erb
+++ b/app/views/guests/index.html.erb
@@ -1,11 +1,11 @@
 <div class="content">
   <h2>Registered guests</h2>
 
-  <ul>
+  <ol>
     <% @tickets.each do |ticket| %>
-      <li><%= ticket.name %>
+      <li><%= ticket.status %> - <%= ticket.name %>
     <% end %>
-  </ul>
+  </ol>
 
   <%= link_to 'Clear guests and start over again with 5 tickets available', reset_path, class: 'button'  %>
 </div>
